# rust-typing-test

./: '  Cargo.toml  Readme.md
src/: main.rs  test.rs
